<resources>
    <string name="app_name">RentEaseApp</string>
    <string name="todo">TODO</string>
    <string name="renter">RENTER</string>
    <string name="owner">OWNER</string>
    <string name="enter_your_name">Enter your name.</string>
    <string name="enter_your_password">Enter your password.</string>
    <string name="forget_password_click_here">FORGET PASSWORD! CLICK HERE</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="uploaded">Image Uploaded</string>
    <string name="bg1">BG1</string>
    <string name="bg2">BG2</string>
    <string name="bg3">BG3</string>
    <string name="bg4">bg4</string>
    <string name="driver_s_license">Driver\'s License</string>
    <string name="select_files">SELECT FILES...</string>
    <string name="sss_id">SSS ID</string>
    <string name="choose_first_id">Choose First ID</string>
    <string name="renting_page_account">Renting Page Account</string>
    <string name="page_name">Page name</string>
    <string name="location">Location</string>
    <string name="region_city">Region/City*</string>
    <string name="select_region_city">Select Region</string>

    <string-array name="region">
        <item>Abra</item>
        <item>Agusan del Norte</item>
        <item>Agusan del Sur</item>
        <item>Aklan</item>
        <item>Albay</item>
        <item>Antique</item>
        <item>Apayao</item>
        <item>Aurora</item>
        <item>Basilan</item>
        <item>Bataan</item>
        <item>Batanes</item>
        <item>Batangas</item>
        <item>Benguet</item>
        <item>Biliran</item>
        <item>Bohol</item>
        <item>Bukidnon</item>
        <item>Bulacan</item>
        <item>Cagayan</item>
        <item>Camarines Norte</item>
        <item>Camarines Sur</item>
        <item>Camiguin</item>
        <item>Capiz</item>
        <item>Catanduanes</item>
        <item>Cavite</item>
        <item>Cebu</item>
        <item>Compostela Valley</item>
        <item>Cotabato</item>
        <item>Davao de Oro</item>
        <item>Davao del Norte</item>
        <item>Davao del Sur</item>
        <item>Davao Occidental</item>
        <item>Davao Oriental</item>
        <item>Dinagat Islands</item>
        <item>Eastern Samar</item>
        <item>Guimaras</item>
        <item>Ifugao</item>
        <item>Ilocos Norte</item>
        <item>Ilocos Sur</item>
        <item>Iloilo</item>
        <item>Isabela</item>
        <item>Kalinga</item>
        <item>La Union</item>
        <item>Laguna</item>
        <item>Lanao del Norte</item>
        <item>Lanao del Sur</item>
        <item>Leyte</item>
        <item>Maguindanao</item>
        <item>Marinduque</item>
        <item>Masbate</item>
        <item>Misamis Occidental</item>
        <item>Misamis Oriental</item>
        <item>Mountain Province</item>
        <item>Negros Occidental</item>
        <item>Negros Oriental</item>
        <item>Northern Samar</item>
        <item>Nueva Ecija</item>
        <item>Nueva Vizcaya</item>
        <item>Occidental Mindoro</item>
        <item>Oriental Mindoro</item>
        <item>Palawan</item>
        <item>Pampanga</item>
        <item>Pangasinan</item>
        <item>Quezon</item>
        <item>Quirino</item>
        <item>Rizal</item>
        <item>Romblon</item>
        <item>Samar</item>
        <item>Sarangani</item>
        <item>Siargao del Norte</item>
        <item>Siargao del Sur</item>
        <item>Siquijor</item>
        <item>Sorsogon</item>
        <item>South Cotabato</item>
        <item>Southern Leyte</item>
        <item>Sultan Kudarat</item>
        <item>Sulu</item>
        <item>Surigao del Norte</item>
        <item>Surigao del Sur</item>
        <item>Tarlac</item>
        <item>Tawi-Tawi</item>
        <item>Zambales</item>
        <item>Zamboanga del Norte</item>
        <item>Zamboanga del Sur</item>
        <item>Zamboanga Sibugay</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>