<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87CEFA"
    tools:context=".SSSidUpload">

    <ImageView
        android:id="@+id/dluWhiteBG1"
        android:layout_width="413dp"
        android:layout_height="166dp"
        android:contentDescription="@string/bg1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/rectange_whitebg" />

    <ImageView
        android:id="@+id/dluWhiteBG2"
        android:layout_width="416dp"
        android:layout_height="120dp"
        android:contentDescription="@string/bg2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dluWhiteBG1"
        app:layout_constraintVertical_bias="0.011"
        app:srcCompat="@drawable/rectange_whitebg" />

    <ImageView
        android:id="@+id/dluWhiteBG6"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:contentDescription="@string/bg2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dluWhiteBG2"
        app:layout_constraintVertical_bias="0.007"
        app:srcCompat="@drawable/rectange_whitebg" />

    <ImageView
        android:id="@+id/dluWhiteBG3"
        android:layout_width="410dp"
        android:layout_height="292dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/bg3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dluWhiteBG6"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/rectange_whitebg" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="412dp"
        android:layout_height="185dp"
        android:contentDescription="@string/bg4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dluWhiteBG3"
        app:layout_constraintVertical_bias="0.174"
        app:srcCompat="@drawable/rectange_whitebg" />

    <Button
        android:id="@+id/aAccountSignUpRentingPageAccbtn"
        android:layout_width="205dp"
        android:layout_height="48dp"
        android:background="@drawable/login_signup_bg"
        android:fontFamily="@font/fredoka_one"
        android:padding="7dp"
        android:text="Continue"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="76dp"
        android:layout_height="62dp"
        app:layout_constraintBottom_toBottomOf="@+id/dluWhiteBG1"
        app:layout_constraintEnd_toEndOf="@+id/dluWhiteBG1"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dluWhiteBG1"
        app:layout_constraintVertical_bias="0.257"
        app:srcCompat="@drawable/idicon" />

    <TextView
        android:id="@+id/textViewSSS"
        android:layout_width="251dp"
        android:layout_height="36dp"
        android:fontFamily="@font/lilita_one"
        android:text="SSS ID"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/dluWhiteBG1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="161dp"
        android:layout_height="37dp"
        android:fontFamily="@font/lilita_one"
        android:text="Attach file"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/dluWhiteBG6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dluWhiteBG2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="161dp"
        android:layout_height="37dp"
        android:fontFamily="@font/lilita_one"
        android:text="Pictures"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="Make sure to follow these tips!"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/dluWhiteBG1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dluWhiteBG1"
        app:layout_constraintVertical_bias="0.684" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="The writing on the ID are clear and readable"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/dluWhiteBG2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toEndOf="@+id/circle1"
        app:layout_constraintTop_toTopOf="@+id/dluWhiteBG2"
        app:layout_constraintVertical_bias="0.116" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="Attach your real and valid ID. not a photocopy"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/dluWhiteBG2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toEndOf="@+id/circle2"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.297" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/montserrat"
        android:text="Attach the front and back of your ID"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/dluWhiteBG2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@+id/circle3"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.542" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/montserrat"
        android:text="Upload a jpeg, jpg, png no larger than 100mb"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.857" />

    <TextView
        android:id="@+id/circle1"
        android:layout_width="20dp"
        android:layout_height="19dp"
        android:background="@drawable/cicle_purplebg"
        android:fontFamily="@font/yeseva_one"
        android:gravity="center"
        android:text="1"

        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/dluWhiteBG2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="@+id/dluWhiteBG2"
        app:layout_constraintTop_toTopOf="@+id/dluWhiteBG2"
        app:layout_constraintVertical_bias="0.118" />

    <TextView
        android:id="@+id/circle2"
        android:layout_width="20dp"
        android:layout_height="19dp"
        android:background="@drawable/cicle_purplebg"
        android:fontFamily="@font/yeseva_one"
        android:gravity="center"
        android:text="2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/dluWhiteBG2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="@+id/dluWhiteBG2"
        app:layout_constraintTop_toTopOf="@+id/dluWhiteBG2"
        app:layout_constraintVertical_bias="0.485" />

    <TextView
        android:id="@+id/circle3"
        android:layout_width="20dp"
        android:layout_height="19dp"
        android:background="@drawable/cicle_purplebg"
        android:fontFamily="@font/yeseva_one"
        android:gravity="center"
        android:text="3"

        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/dluWhiteBG2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="@+id/dluWhiteBG2"
        app:layout_constraintTop_toTopOf="@+id/dluWhiteBG2"
        app:layout_constraintVertical_bias="0.841" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="359dp"
        android:layout_height="242dp"
        app:layout_constraintBottom_toBottomOf="@+id/dluWhiteBG3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dluWhiteBG3"
        app:srcCompat="@drawable/greencornerstriped_nobg" />

    <Button
        android:id="@+id/selectFilesbtn2"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:background="@drawable/graycorner_whitebg"
        android:fontFamily="@font/oswald_medium"
        android:text="@string/select_files"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.51" />

    <ImageView
        android:id="@+id/uploadedSSSfirst"
        android:layout_width="90dp"
        android:layout_height="89dp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.583"
        app:srcCompat="@drawable/rectange_whitebg" />
</androidx.constraintlayout.widget.ConstraintLayout>